--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.2.0
-  firebase_auth: ^0.8.4+5
 #  geoflutterfire: ^2.0.3+2
-  location: ^2.3.5
   google_maps_webservice: ^0.0.14
 #  geolocator: any
   geolocator: ^5.1.0
@@ -44,6 +42,9 @@ dependencies:
   http: any
   flutter_spinkit: "^4.1.2"
   flutter_staggered_grid_view: "0.3.0"
+  provider:
+  location: ^2.3.5
+  
 
 
 
@@ -66,6 +67,7 @@ flutter:
   assets:
      - assets/images/oldies.png
      - assets/images/kidrunning.png
+     - assets/images/foodright.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
