--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   geolocator: ^5.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  geocoder: ^0.1.2
+  geocoder: ^0.2.1
 #  flutter_spinkit: "^3.1.0"
   mapbox_search:
   flutter_map:
@@ -44,6 +44,7 @@ dependencies:
   flutter_staggered_grid_view: "0.3.0"
   provider:
   location: ^2.3.5
+  flutter_google_places: ^0.2.3
   
 
 
@@ -69,6 +70,7 @@ flutter:
      - assets/images/kidrunning.png
      - assets/images/foodright.png
      - assets/images/sitmarker.png
+     - assets/images/usermarker.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
