--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.2.0
-#  geoflutterfire: ^2.0.3+2
   google_maps_webservice: ^0.0.14
-#  geolocator: any
   geolocator: ^5.1.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   geocoder: ^0.2.1
-#  flutter_spinkit: "^3.1.0"
   mapbox_search:
   flutter_map:
   http: any
@@ -45,13 +40,23 @@ dependencies:
   provider:
   location: ^2.3.5
   flutter_google_places: ^0.2.3
+  # location_permissions: ^2.0.5
+  permission_handler: ^5.0.0
+
   
 
 
 
 dev_dependencies:
+  flutter_launcher_icons:
+
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: 'assets/images/groceriesbag.png'
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,6 +76,8 @@ flutter:
      - assets/images/foodright.png
      - assets/images/sitmarker.png
      - assets/images/usermarker.png
+     - assets/images/logo.png
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
