ready for deployment

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
      - assets/images/sitmarker.png
      - assets/images/usermarker.png
      - assets/images/logo.png
+     - assets/images/baggy.png
+
 
 
 
